--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(openvdb-renderer)
+project(openvdb-renderer-gui)
 
 # general cmake settings
 set(CMAKE_CXX_STANDARD 14)
@@ -8,11 +8,6 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # OpenGL
 find_package(OpenGL REQUIRED)
-
-# OpenVDB
-set(OPENVDB_BUILD_AX ON)
-set(USE_AX ON)
-add_subdirectory(thirdparty/openvdb)
 
 # GLFW
 add_subdirectory(thirdparty/glfw)
@@ -24,7 +19,10 @@ endif()
 
 
 # include directory
-include_directories(${CMAKE_PROJECT_NAME} thirdparty/imgui)
+include_directories(${CMAKE_PROJECT_NAME}
+  thirdparty/imgui/backends
+  thirdparty/imgui)
+
 
 # dear imgui
 set(IMGUI_SRC
@@ -36,24 +34,12 @@ set(IMGUI_SRC
   thirdparty/imgui/backends/imgui_impl_glfw.cpp
   thirdparty/imgui/backends/imgui_impl_opengl3.cpp)
 
-# src
-set(SRC
-  src/openvdb_view.cc  
-  src/viewer/Camera.cc
-  src/viewer/ClipBox.cc
-  src/viewer/Font.cc
-  src/viewer/RenderModules.cc
-  src/viewer/Viewer.cc)
-
-add_executable(${CMAKE_PROJECT_NAME} ${IMGUI_SRC} ${SRC})
+add_executable(${CMAKE_PROJECT_NAME} ${IMGUI_SRC} src/gui.cc)
 
 #
 target_link_libraries(${CMAKE_PROJECT_NAME}
   OpenGL::GL
   OpenGL::GLU
-  glfw
-  openvdb)
-
-target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE -DGL_GLEXT_PROTOTYPES=1)
+  glfw)
 
 
